--- a/main.html
+++ b/main.html
@@ -11,6 +11,15 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<img src="2wCEAAoHCBUUFBcVFBUYGBcYGx0bHBcbGx0dGx0aHR0dGxsYGx0gICwkGyApIBoXJTYlKS4wMzMzHCI5PjkyPSwyMzABCwsLEA4QHhISHjIpJCkyNDQ1MjIwNTI0MzAyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMv">
+	<h1>AMIT</h1>
+	<a href="https://www.linkedin.com/in/amit-phalwadiya-683514211/">LinkedIn Profile</a>
+	<section>HTML,CSS,JAVA,JAVASCRIPT,REACT</section>
+	<ul id="projects">
+		<li>News</li>
+		<li>football</li>
+	</ul>
+	
 </body>
 
 </html>
